<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_journal_text"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditJournalText">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relative_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/journal_bg_short">


        <ImageButton
            android:id="@+id/close"
            style="@android:style/Widget.ImageButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="304dp"
            android:layout_marginEnd="16dp"
            android:background="@color/cardview_shadow_end_color"
            android:contentDescription="@string/save"
            android:scaleType="fitXY"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.927"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.114"
            app:srcCompat="@android:drawable/ic_menu_save"
            app:tint="@color/black"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/upload"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="160dp"
            android:layout_marginEnd="72dp"
            android:background="@color/cardview_shadow_end_color"
            android:contentDescription="@string/upload"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.693"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.132"
            app:srcCompat="@android:drawable/ic_menu_gallery"
            app:tint="@color/black" />

        <EditText
            android:id="@+id/display_text"
            android:layout_width="0dp"
            android:layout_height="450dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="32dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="32dp"
            android:gravity="top|left"
            android:hint="@string/journal_text"
            android:lines="10"
            android:maxLines="15"
            android:minLines="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relative_mood"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_alignParentBottom="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/display_text">

            <ImageView
                android:id="@+id/mood_bg"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:src="@android:drawable/screen_background_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:tint="@color/blue_200" />

            <ImageButton
                android:id="@+id/sick"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="32dp"
                android:layout_toEndOf="@+id/angry"
                android:backgroundTint="#00FFFFFF"
                android:src="@drawable/sick"
                app:layout_constraintEnd_toEndOf="@+id/mood_bg"
                app:layout_constraintStart_toEndOf="@+id/angry"
                app:layout_constraintTop_toTopOf="@+id/angry"
                app:tint="@color/black" />

            <ImageButton
                android:id="@+id/angry"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@+id/normal"
                android:backgroundTint="#00FFFFFF"
                android:src="@drawable/angry"
                app:layout_constraintEnd_toStartOf="@+id/sick"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/normal"
                app:layout_constraintTop_toTopOf="@+id/normal"
                app:tint="@color/black" />

            <ImageButton
                android:id="@+id/normal"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@+id/sad"
                android:backgroundTint="#00FFFFFF"
                android:src="@drawable/neutral"
                app:layout_constraintEnd_toStartOf="@+id/angry"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/sad"
                app:layout_constraintTop_toTopOf="@+id/sad"
                app:tint="@color/black" />

            <ImageButton
                android:id="@+id/sad"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_toEndOf="@+id/happy"
                android:backgroundTint="#00FFFFFF"
                android:src="@drawable/sad"
                app:layout_constraintEnd_toStartOf="@+id/normal"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/happy"
                app:layout_constraintTop_toTopOf="@+id/happy"
                app:tint="@color/black" />

            <ImageButton
                android:id="@+id/happy"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="#00FFFFFF"
                android:src="@drawable/happy"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/sad"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/mood_bg"
                app:layout_constraintStart_toStartOf="@+id/mood_bg"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>